# instagram-scene-detection

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  settings.toml
scripts/: setup-darknet.sh
src/: __main__.py
src/scene_detection/: __main__.py  types.py
src/scene_detection/core/: __init__.py  main.py
src/scene_detection/core/settings/: __init__.py  application.py  detector.py  model.py  ocr.py  prediction.py
src/scene_detection/detection/: __init__.py  scenes.py
src/scene_detection/detection/detectors/: __init__.py  comment_detector.py  external_detector.py  homepage_detector.py  reels_detector.py  scene_detector.py  utils.py
src/scene_detection/libs/: cloud_vision.py  darknet.py  detect_objects.py
src/scene_detection/utils/: logger.py
