[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black>=23.1.0", "ruff>=0.0.247", "mypy>=1.0.1"]

[tool.pdm.scripts]
"format" = "black src"
"lint" = "ruff check src"
"check" = "mypy src"
"start" = "python3 src"

[project]
name = "instagram-scene-detection"
version = "0.0.0"
description = ""
authors = [{ name = "alan910127", email = "alan469357@gmail.com" }]
dependencies = ["pydantic>=1.10.5", "tomlkit>=0.11.6"]
requires-python = ">=3.7"
license = { text = "MIT" }
