[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.247",
    "mypy>=1.0.1",
    "types-Pillow>=9.4.0.13",
]

[tool.pdm.scripts]
"format" = "black src"
"lint" = "ruff check src"
"check" = "mypy src"
"start" = "python3 src/scene_detection"

[project]
name = "instagram-scene-detection"
version = "0.0.0"
description = ""
authors = [{ name = "alan910127", email = "alan469357@gmail.com" }]
dependencies = [
    "pydantic>=1.10.5",
    "tomlkit>=0.11.6",
    "google-cloud-vision>=3.3.1",
    "click>=8.1.3",
    "numpy>=1.21.1",
    "scikit-image>=0.19.3",
    "pillow>=9.4.0",
]

requires-python = ">=3.8"
license = { text = "MIT" }
